2008-07-26  Zoltan Varga  <vargaz@gmail.com>

	* cpu-x86.md (fcall_membase): Increase the size of the fcall opcodes.

	* mini.c (mono_jit_compile_method_inner): Add support for 
	MONO_EXCEPTION_BAD_IMAGE.

	* method-to-ir.c (mono_method_to_ir2): Avoid a crash if 
	mini_method_get_context () returns NULL. Fixes #356531.

	* mini.c (mono_method_to_ir): Ditto.
	
	* method-to-ir.c (mono_method_to_ir2): Create a variable if needed when
	accessing a field of a valuetype in LDFLD/STFLD. Fixes #412399.

2008-07-25  Zoltan Varga  <vargaz@gmail.com>

	* method-to-ir.c (mono_method_to_ir2): Initialize an uninitialized variable
	in the LDFTN implementation.

2008-07-25  Mark Probst  <mark.probst@gmail.com>

	* mini-trampolines.c (mono_magic_trampoline): When sharing generic
	code, patch calls to icalls, too, even if they're not in the
	shared generic code hash.  Fixes #411962.

2008-07-25  Zoltan Varga  <vargaz@gmail.com>

	* cpu-x86.md: Increase the length of the fcall opcodes.

	* mini-x86.c (emit_move_return_value): Avoid some precision issues for
	calls returning floats.

	* method-to-ir.c (mono_method_to_ir2): Remove the generic sharing restrictions
	on NEWARR.
	
	* method-to-ir.c (mono_method_to_ir2): Merge some LDFTN gsharing changes
	missed earlier.

	* method-to-ir.c (handle_delegate_ctor): Avoid putting dynamic methods
	into the domain->method_code_hash.

	* aot-compiler.c: Fix win32 build.

	* method-to-ir.c (EMIT_GET_RGCTX): Call EMIT_NEW_LDARG in emit_get_rgctx ().
	
	* method-to-ir.c (mono_method_to_ir2): Use mono_array_new_specific in the
	gshared NEWARR implementation.

	* cpu-sparc.md: Remove duplicate localloc_imm opcode.

	* ir-emit.h (NEW_ARGLOAD): Use cfg->args and cfg->arg_types so this macro
	can be used outside of method_to_ir.

	* mini.h (MonoCompile): Add arg_types field.

	* method-to-ir.c (inline_method): Save/Restore cfg->args and cfg->arg_types.
	
	* method-to-ir.c (mono_method_to_ir2): Set cfg->args and cfg->arg_types to